tests/errors/pat_nav_unresolved_err/pat_nav_unresolved_err.c
#error pat_nav_unresolved_err:7:6 Couldn't resolve nav pattern.
